--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.3.4
 certifi==2020.12.5
 Django==3.2.2
+django-crispy-forms==1.11.2
 gunicorn==20.1.0
 psycopg2-binary==2.8.6
 pytz==2021.1
